Fixed weird spacing

--- a/packages/augur-ui/src/modules/market/components/market-view/market-view.styles.less
+++ b/packages/augur-ui/src/modules/market/components/market-view/market-view.styles.less
@@ -749,7 +749,13 @@ div.OutcomeNameDisplay {
       padding: @size-40 0 @size-12;
 
       > div:first-of-type {
-        padding: 0 @size-48 0 @size-40;
+        padding: 0 @size-56 0 0;
+      }
+
+      > button:first-of-type {
+        padding: 0;
+        margin: 0;
+        width: 100%;
       }
     }
   }
